# cloud-native-demo

./: .containerignore  .dockerignore  Containerfile  README.md  app.py  pyproject.toml  requirements.txt  skaffold.yaml
app/: main.py
app/arguments/: __init__.py
arguments/: __init__.py
k8s/: deployment.yaml
k8s/app/: deployment.yaml
k8s/redis/: redis.yaml
scripts/: build-demo-app.sh  create-pod.sh  ps-formatted.sh  remove-pod.sh  run-demo-app-with-health.sh  run-demo-app.sh  run-redis.sh  stop-demo-app.sh  stop-redis.sh
