[tool.poetry]
name = "cloud-native-demo"
version = "0.1.0"
description = ""
authors = ["Michael Frayer <frayerm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
redis = "^5.0.8"


[tool.poetry.group.dev.dependencies]
types-redis = "^4.6.0.20240903"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
